--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   
   <!-- Stylesheets -->
-  <link rel="stylesheet" href="styles-new.css">
+  <link rel="stylesheet" href="styles.css">
   
   <!-- Structured Data -->
   <script type="application/ld+json">
@@ -385,6 +385,6 @@
 
   <!-- Scripts -->
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-  <script src="script-new.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
