Remove legacy documentation and update README
Deleted outdated documentation and setup files (PROJECT-SUMMARY.md, QUICK-REFERENCE.md, QUICK-START.ps1, README-COMPLETE.md, README-NEW.md, SUMMARY.md) and updated README.md to reflect a simplified, static photography portfolio approach. The new README provides guidance for static hosting, modern design, and alternative CMS recommendations, removing references to the previous Docker/Portainer/Payload CMS stack.

--- a/index.html
+++ b/index.html
@@ -375,10 +375,27 @@
       </svg>
     </button>
     <div class="lightbox-content">
-      <img src="" alt="" id="lightbox-image">
+      <div class="lightbox-image-wrapper">
+        <img src="" alt="" id="lightbox-image">
+        <div class="photo-watermark">Ben Foggon</div>
+      </div>
       <div class="lightbox-info">
-        <h3 id="lightbox-title"></h3>
-        <p id="lightbox-description"></p>
+        <div class="lightbox-info-header">
+          <div>
+            <h3 id="lightbox-title"></h3>
+            <p id="lightbox-description"></p>
+          </div>
+          <button id="lightbox-share-btn" class="lightbox-share-btn" onclick="sharePhoto(this.dataset.photoId, this.dataset.title)" title="Share this photo">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <circle cx="18" cy="5" r="3"></circle>
+              <circle cx="6" cy="12" r="3"></circle>
+              <circle cx="18" cy="19" r="3"></circle>
+              <line x1="8.59" y1="13.51" x2="15.42" y2="17.49"></line>
+              <line x1="15.41" y1="6.51" x2="8.59" y2="10.49"></line>
+            </svg>
+            Share
+          </button>
+        </div>
       </div>
     </div>
   </div>
