--- a/index.html
+++ b/index.html
@@ -385,16 +385,26 @@
             <h3 id="lightbox-title"></h3>
             <p id="lightbox-description"></p>
           </div>
-          <button id="lightbox-share-btn" class="lightbox-share-btn" onclick="sharePhoto(this.dataset.photoId, this.dataset.title)" title="Share this photo">
-            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-              <circle cx="18" cy="5" r="3"></circle>
-              <circle cx="6" cy="12" r="3"></circle>
-              <circle cx="18" cy="19" r="3"></circle>
-              <line x1="8.59" y1="13.51" x2="15.42" y2="17.49"></line>
-              <line x1="15.41" y1="6.51" x2="8.59" y2="10.49"></line>
-            </svg>
-            Share
-          </button>
+          <div class="lightbox-actions">
+            <button id="lightbox-download-btn" class="lightbox-action-btn" onclick="downloadPhotoWithWatermark(this.dataset.imageUrl, this.dataset.title)" title="Download with watermark">
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
+                <polyline points="7 10 12 15 17 10"></polyline>
+                <line x1="12" y1="15" x2="12" y2="3"></line>
+              </svg>
+              Download
+            </button>
+            <button id="lightbox-share-btn" class="lightbox-action-btn" onclick="sharePhoto(this.dataset.photoId, this.dataset.title)" title="Share this photo">
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <circle cx="18" cy="5" r="3"></circle>
+                <circle cx="6" cy="12" r="3"></circle>
+                <circle cx="18" cy="19" r="3"></circle>
+                <line x1="8.59" y1="13.51" x2="15.42" y2="17.49"></line>
+                <line x1="15.41" y1="6.51" x2="8.59" y2="10.49"></line>
+              </svg>
+              Share
+            </button>
+          </div>
         </div>
       </div>
     </div>
